# orthos

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.crates.md  README.md  README.pypi.md  pyproject.toml
.github/workflows/: ci.yml  crates-publish.yml  release.yml
benches/: matrix_ops.rs
docs/: design.md  objective.md
examples/: basic_operations.py  benchmark.py  linear_system.py  numpy_interop.py  rust_api_test.rs
python/orthos/: __init__.py  __init__.pyi
src/: error.rs  lib.rs  matrix.rs  ops.rs  vector.rs
tests/python/: test_matrix.py
