[package]
name = "orthos"
version = "0.1.0"
edition = "2021"
description = "High-performance linear algebra library written in Rust with Python bindings"
license = "MIT"

[lib]
name = "orthos"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
faer = "0.22"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matrix_ops"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
